Fixed Horizontal Scroll BUG

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,6 @@ body {
   margin: 0;
   padding: 0;
 }
+html, body {
+  overflow-x: hidden;
+}
